// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page/RuleKnowledge/EditKnowledgeContent input text for edit knowledge content 1`] = `
<body>
  <div>
    <input
      class="css-ldyx34"
      height="500px"
      previewoptions="{"rehypePlugins":[[null]]}"
      textareaprops="{"placeholder":"在此处输入.."}"
      value="123"
    />
  </div>
</body>
`;

exports[`page/RuleKnowledge/EditKnowledgeContent render default content 1`] = `
<body>
  <div>
    <input
      class="css-ldyx34"
      height="500px"
      previewoptions="{"rehypePlugins":[[null]]}"
      textareaprops="{"placeholder":"在此处输入.."}"
      value="edit text"
    />
  </div>
</body>
`;

exports[`page/RuleKnowledge/EditKnowledgeContent render empty content 1`] = `
<body>
  <div>
    <input
      class="css-ldyx34"
      height="500px"
      previewoptions="{"rehypePlugins":[[null]]}"
      textareaprops="{"placeholder":"在此处输入.."}"
      value=""
    />
  </div>
</body>
`;
